--- a/checkin/views/admin.html
+++ b/checkin/views/admin.html
@@ -108,9 +108,8 @@
 the other QR codes) and a Visitor ID (a randomly generated 6-digit number). Each
 QR code corresponds to a single attendee at your event and should be printed on a
 badge.</h3>
-    <h3>Download Previously Generated QR Code Batches:</h3>
-    <h3>0000-2200.zip</h3>
-
+    <!--<h3>Download Previously Generated QR Code Batches:</h3>
+    <h3>0000-2200.zip</h3>-->
 
     <form action="/deployments/view/{{ deployment.slug }}/admin" method="POST">
       <input type="hidden" name="referring_page" value="ADMIN" />
@@ -123,7 +122,7 @@ badge.</h3>
               <span class="input-group-addon">New QR Codes</span>
             </div>
         </div>
-        <button type="button" class="btn btn-primary navbar-btn">Go!</button>
+        <button type="submit" class="btn btn-primary navbar-btn">Go!</button>
       </div>
     </form>
 
@@ -163,9 +162,18 @@ badge.</h3>
 <div class="tab-pane container" id="booths">
     <h3>Each booth should have a single booth account shared between all of the exhibitors
      working at that booth.</h3>
+     <h4>Note: Upload files should be CSV formatted with a header row</h4>
+     <h4>Header Row Example: Username,EmailAddress,VendorName,Password,Admin </h4>
 
     <button type="button" class="btn btn-primary navbar-btn btn-lg" data-toggle="modal" data-target="#addBoothModal">Create New Booth</button>
-    <button type="button" class="btn btn-primary navbar-btn btn-lg">Bulk Import from CSV</button>
+
+    <form enctype="multipart/form-data" action="/deployments/view/{{ deployment.slug }}/admin" method="POST">
+        <label for="filename">Filename</label>
+        <input id="bulkfile" type="file" name="bulkfile" />
+        <input type='hidden' name='method' value='UPLOAD_BOOTHS'>
+        <input type="hidden" name="referring_page" value="ADMIN" />
+        <input type="submit" class="btn btn-primary navbar-btn btn-lg" value="Bulk Import from CSV" />
+    </form>
 
     <div class="modal fade" id="addBoothModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
