--- a/checkin/views/admin.html
+++ b/checkin/views/admin.html
@@ -35,6 +35,8 @@
             <span class="input-group-addon" id="basic-addon3">.{{ deployment.custom_dns }}</span>
         </div>
         <h3>3) To connect the app to your website, you need to add the following DNS record to your domain. This can typically be done by logging into your domain name provider's online control panel:</h3>
+        <h4>A. Create an A record pointing checkin.csfair.nyc to the ip address 107.178.223.42</h4>
+        <h4>B. Send an email to support@check-me-in.biz. Make sure to include your deployment Name, your custom-dns and your subdomain in your email. Your custom domain will be setup with 48 hours.</h4>
 
         <button type="submit" class="btn btn-primary navbar-btn btn-lg">Save</button>
     </div>
