--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -11,6 +11,7 @@
     <link href="/css/bootstrap-colorpicker.min.css" rel="stylesheet">
     <!-- Custom Stylesheet -->
     <link href="/css/checkin.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.13/datatables.min.css"/>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -19,6 +20,8 @@
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/checkin.js"></script>
     <script src="/js/bootstrap-colorpicker.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.13/datatables.min.js"></script>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
