background job q management, qr code dump

--- a/checkin/views/admin.html
+++ b/checkin/views/admin.html
@@ -142,7 +142,7 @@ badge.</h3>
         <h3>QR Code Information</h3>
       </div>
     </div>
-    <button type="button" class="btn btn-primary navbar-btn">Export All as .CSV</button>
+    <a class="btn btn-primary navbar-btn" href="dump_badges" target="_blank">Export All as .CSV</a>
 
     <br><br>
     <table id="qrcodestable" class="display" cellspacing="0" width="100%">
