--- a/checkin/views/admin.html
+++ b/checkin/views/admin.html
@@ -37,8 +37,8 @@
         <h3>3) To connect the app to your website, you need to add the following DNS record to your domain. This can typically be done by logging into your domain name provider's online control panel:</h3>
         <h4>A. Create an A record pointing <span id="domainbadge" class="badge badge-success">{{deployment.custom_subdomain}}.{{deployment.custom_dns}}</span> to the ip address 107.178.223.42</h4>
         <h4>B. Send an email to support@check-me-in.biz. Make sure to include your deployment Name, your custom-dns and your subdomain in your email. Your custom domain will be setup with 48 hours.</h4>
-
-        <button type="submit" class="btn btn-primary navbar-btn btn-lg">Save</button>
+        <!--onClick="this.disabled=true; this.value='Working...'"; -->
+        <button id="deployment-save" type="submit" class="btn btn-primary navbar-btn btn-lg" >Save</button>
     </div>
 
     <div class="tab-pane container" id="look">
@@ -142,7 +142,8 @@ badge.</h3>
         <h3>QR Code Information</h3>
       </div>
     </div>
-    <a class="btn btn-primary navbar-btn" href="dump_badges" target="_blank">Export All as .CSV</a>
+    <a class="btn btn-primary navbar-btn" href="dump_badges" target="_blank">Export All as PDF</a>
+    <a class="btn btn-primary navbar-btn" href="dump_badges_csv" target="_blank">Export All as .CSV</a>
 
     <br><br>
     <table id="qrcodestable" class="display" cellspacing="0" width="100%">
@@ -447,6 +448,11 @@ badge.</h3>
         data:'id=test',
         success: function(result){
           $("#backgroundjobs").html(result);
+          // if (result.includes("FINISHED") === true){
+          //   $('#deployment-save').dsiabled = 'true';
+          //   $('#deployment-save').value = 'save';
+          // }
+
         },
         error:function(){}
       });
