hardening of zip file generation, switching over qrcodes to pure pngs

--- a/checkin/views/admin.html
+++ b/checkin/views/admin.html
@@ -144,6 +144,8 @@ badge.</h3>
     </div>
     <a class="btn btn-primary navbar-btn" href="dump_badges" target="_blank">Export All as PDF</a>
 
+    <a class="btn btn-primary navbar-btn" href="dump_qr_codes_zip" target="_blank">Export all QR codes as ZIP</a>
+
     <a class="btn btn-primary navbar-btn" href="dump_badges_csv" target="_blank">Export All as .CSV</a>
 
     <br><br>
