--- a/checkin/views/visitor_dump.html
+++ b/checkin/views/visitor_dump.html
@@ -4,3 +4,25 @@
   <h1>{{ v.serialized_id }} : {{ v.visitor_id }} ({{ v.checkin_url }})</h1>
   <BR>
 {% endfor %}
+
+
+<script>
+
+    // job_listener = setInterval(function () {
+    //   $.ajax({
+    //     url: "dump_badges",
+    //     type: "post",
+    //     data:'id=test',
+    //     success: function(result){
+    //       $("#backgroundjobs").html(result);
+    //       // if (result.includes("FINISHED") === true){
+    //       //   $('#deployment-save').dsiabled = 'true';
+    //       //   $('#deployment-save').value = 'save';
+    //       // }
+    //
+    //     },
+    //     error:function(){}
+    //   });
+    // }, 1000);
+
+</script>
