--- a/checkin/views/admin.html
+++ b/checkin/views/admin.html
@@ -10,7 +10,7 @@
     <li id="analyticstab"><a href="#analytics" data-toggle="tab">Analytics</a></li>
 </ul>
 
-<form action="/deployments/view/{{ deployment.slug }}/admin" method="POST" id = "usrform" enctype="multipart/form-data">
+<form action="admin" method="POST" id = "usrform" enctype="multipart/form-data">
     <input type="hidden" name="slug" value="{{ deployment.slug }}" />
     <input type="hidden" name="logo_url" value="{{ deployment.logo_url }}" />
     <input type="hidden" name="referring_page" value="ADMIN" />
@@ -113,7 +113,7 @@ badge.</h3>
     <!--<h3>Download Previously Generated QR Code Batches:</h3>
     <h3>0000-2200.zip</h3>-->
 
-    <form action="/deployments/view/{{ deployment.slug }}/admin" method="POST">
+    <form action="admin" method="POST">
       <input type="hidden" name="referring_page" value="ADMIN" />
       <input type="hidden" name="method" value="GENERATE_QR_CODES" />
       <div class="row">
@@ -174,7 +174,7 @@ badge.</h3>
 
     <button type="button" class="btn btn-primary navbar-btn btn-lg" data-toggle="modal" data-target="#addBoothModal">Create New Booth</button>
 
-    <form enctype="multipart/form-data" action="/deployments/view/{{ deployment.slug }}/admin" method="POST">
+    <form enctype="multipart/form-data" action="admin" method="POST">
         <label for="filename">Filename</label>
         <input id="bulkfile" type="file" name="bulkfile" />
         <input type='hidden' name='method' value='UPLOAD_BOOTHS'>
@@ -192,7 +192,7 @@ badge.</h3>
           </button>
         </div>
         <div class="modal-body">
-          <form class="form-horizontal" action="/deployments/view/{{ deployment.slug }}/admin" method="POST">
+          <form class="form-horizontal" action="admin" method="POST">
             <input type="hidden" name="referring_page" value="ADMIN" />
             <input type="hidden" name="method" value="CREATE_NEW_BOOTH" />
             <div class="form-group">
@@ -249,7 +249,7 @@ badge.</h3>
         </button>
       </div>
       <div class="modal-body">
-        <form class="form-horizontal" action="/deployments/view/{{ deployment.slug }}/admin" method="POST">
+        <form class="form-horizontal" action="admin" method="POST">
           <input type="hidden" name="old-username" id="edit-old-username" />
           <input type="hidden" name="referring_page" value="ADMIN" />
           <input type="hidden" name="method" value="EDIT_BOOTH" />
@@ -319,7 +319,7 @@ badge.</h3>
                 <td>
                     <button type="button" class="btn btn-primary" data-toggle = 'modal' data-target='#editBoothModal' data-vendorname="{{u.vendorname}}" data-username="{{u.username}}" data-email="{{u.email}}" data-admin="{{u.is_deployment_admin}}" data-password="{{u.password}}" >Edit</button>
 
-                    <form action="/deployments/view/{{ deployment.slug }}/admin" method="POST" onsubmit="return confirm('Do you really wish to delete this booth?');">
+                    <form action="admin" method="POST" onsubmit="return confirm('Do you really wish to delete this booth?');">
                       <input type="hidden" name="referring_page" value="ADMIN" />
                       <input type="hidden" name="method" value="DELETE_BOOTH" />
                       <input type="hidden" name="edit-username" value="{{u.username}}" />
@@ -334,7 +334,7 @@ badge.</h3>
 <div class="tab-pane container" id="raffle">
     <h3>And the winner is...</h3>
     <h1>{{random_visitor}}</h1>
-    <form action="/deployments/view/{{ deployment.slug }}/admin" method="POST">
+    <form action="admin" method="POST">
         <input type='hidden' name='method' value='RANDOM_VISITOR'>
         <button type="submit" class="btn btn-primary btn-lg">Draw Another Winner</button>
     </form>
