started async reports and bulk upload visitors

--- a/checkin/views/admin.html
+++ b/checkin/views/admin.html
@@ -56,6 +56,7 @@
 
         <h3>Header Logo</h3>
         <h3>(recommended size 150x150 px)</h3>
+        <img src = "{{deployment.logo_url}}"/>
 
 
         <label for="filename">Filename</label>
