--- a/checkin/views/super_admin.html
+++ b/checkin/views/super_admin.html
@@ -36,7 +36,7 @@
               <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">Event Name</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="title" name="title" placeholder="Event Name">
+                  <input type="text" class="form-control" id="name" name="name" placeholder="Event Name">
                 </div>
               </div>
               <h5>Note: deployment admins be able to modify this field.</h5>
