shell for checkins csv export

--- a/checkin/views/admin.html
+++ b/checkin/views/admin.html
@@ -347,7 +347,7 @@ badge.</h3>
     </form>
 </div>
 <div class="tab-pane container" id="analytics">
-  <button type="button" class="btn btn-primary navbar-btn btn-lg">Download Raw Checkin Data</button>
+  <a class="btn btn-primary navbar-btn" href="dump_checkins_csv" target="_blank">Download Raw Checkin Data</a>
   <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
       <div class="panel-heading" role="tab" id="headingOne">
