finsihed up checkin csv export and hardening csv file export

--- a/checkin/views/admin.html
+++ b/checkin/views/admin.html
@@ -153,7 +153,7 @@ badge.</h3>
 
     <a class="btn btn-primary navbar-btn" href="dump_qr_codes_zip" target="_blank">Export all QR codes as ZIP</a>
 
-    <a class="btn btn-primary navbar-btn" href="dump_badges_csv" target="_blank">Export All as .CSV</a>
+    <a class="btn btn-primary navbar-btn" href="dump_badges_csv" >Export All as .CSV</a>
 
     <br><br>
     <table id="qrcodestable" class="display" cellspacing="0" width="100%">
